@@ -1,3 +1,12 @@
+2014-05-13  Andrew John Hughes  <gnu.andrew@member.fsf.org>
+
+	PR2432: ppc64 JIT doesn't support class data sharing
+	* Makefile.am:
+	(add-archive): Skip on ppc64.
+	(add-archive-debug): Likewise.
+	(add-archive-boot): Likewise.
+	* NEWS: Updated.
+
 2015-06-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	PR2429: OpenJDK build does not copy a symlinked
